--- a/src/styles/components/Layout.css
+++ b/src/styles/components/Layout.css
@@ -3,7 +3,8 @@
     max-width: 800px;
 }
 
-@media screen and (max-width: calc(800px + 2rem)) {
+/* The 46px is a mystery to me, but it works */
+@media screen and (max-width: calc(800px + 46px)) {
     .Layout {
         margin: 1rem;
     }
