--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,3 +1,5 @@
+@import './material-design-color-palette.css';
+
 :root {
     --system-fonts: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
