--- a/src/styles/_index.css
+++ b/src/styles/_index.css
@@ -16,3 +16,4 @@ body {
 /* Components */
 @import './components/Bio.css';
 @import './components/Layout.css';
+@import './components/PostPreview.css';
