--- a/src/styles/_index.css
+++ b/src/styles/_index.css
@@ -5,6 +5,8 @@
 @import './variables.css';
 
 body {
+    background: var(--primary-bg);
+    color: var(--primary-text);
     font-family: var(--system-fonts);
     -webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -12,6 +14,7 @@ body {
 
 /* Styles */
 @import './headings.css';
+@import './links.css';
 
 /* Components */
 @import './components/Bio.css';
