Create reusable SearchLink component

--- a/src/styles/_index.css
+++ b/src/styles/_index.css
@@ -18,5 +18,6 @@ body {
 
 /* Components */
 @import './components/Bio.css';
+@import './components/SearchLink.css';
 @import './components/Layout.css';
 @import './components/PostPreview.css';
