--- a/src/styles/components/PostPreview.css
+++ b/src/styles/components/PostPreview.css
@@ -10,34 +10,15 @@
     margin-right: 1rem;
 }
 
-.PostPreview__category .PostPreview__search-link {
+/*
+    Move below to separate component for
+    category and tag links
+*/
+
+.PostPreview__category .SearchLink {
     background: var(--primary-color);
 }
 
-.PostPreview__tags .PostPreview__search-link {
+.PostPreview__tags .SearchLink {
     background: var(--secondary-color);
-}
-
-.PostPreview__search-link {
-    background: whitesmoke;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.25);
-    border-radius: 0.25rem;
-    display: inline-block;
-    margin-left: 0.5rem;
-    padding: 0.25rem 0.5rem;
-    transition: all 100ms ease-in-out;
-}
-
-.PostPreview__search-link,
-.PostPreview__search-link:hover,
-.PostPreview__search-link:active,
-.PostPreview__search-link:visited {
-    color: var(--secondary-text);
-    text-decoration: none;
-}
-
-.PostPreview__search-link:hover {
-    border-bottom-width: 0;
-    /* Width of bottom border */
-    transform: translateY(2px);
 }
