Add style modifier to SearchLink based on queryKey
Removed the necessity of separate Category- and TagSearchLink
components.

--- a/src/styles/components/SearchLink.css
+++ b/src/styles/components/SearchLink.css
@@ -21,3 +21,13 @@
     /* Width of bottom border */
     transform: translateY(2px);
 }
+
+/* Modified styles */
+
+.SearchLink--category {
+    background: var(--primary-color);
+}
+
+.SearchLink--tags {
+    background: var(--secondary-color);
+}
