--- a/src/styles/_index.css
+++ b/src/styles/_index.css
@@ -18,7 +18,9 @@ body {
 
 /* Components */
 @import './components/Bio.css';
-@import './components/SearchLink.css';
+@import './components/Header.css';
 @import './components/Layout.css';
+@import './components/MainNav.css';
 @import './components/PostFooter.css';
 @import './components/PostPreview.css';
+@import './components/SearchLink.css';
