--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -1,8 +1,10 @@
 .Footer {
+    background: var(--gray100);
+}
+
+.Responsive--footer {
     display: flex;
-    border-top: 1px solid lightgray;
     justify-content: space-between;
-    margin-top: 1rem;
     padding: 1rem 0;
 }
 
