--- a/src/styles/components/PostPreview.css
+++ b/src/styles/components/PostPreview.css
@@ -2,7 +2,12 @@
     margin-bottom: 2rem;
 }
 
-/* .PostPreview--condensed {
+.PostPreview__header {
+    align-items: center;
     display: flex;
-    flex-wrap: wrap;
-} */
+    justify-content: space-between;
+}
+
+.PostPreview__title {
+    margin-bottom: 0;
+}
