Pluralize pages, links
Seems to be the standard.

--- a/src/styles/components/SearchLink.css
+++ b/src/styles/components/SearchLink.css
@@ -24,10 +24,10 @@
 
 /* Modified styles */
 
-.SearchLink--category {
+.SearchLink--categories {
     background: var(--primary-color);
 }
 
-.SearchLink--tag {
+.SearchLink--tags {
     background: var(--secondary-color);
 }
