--- a/src/styles/components/TagLinks.css
+++ b/src/styles/components/TagLinks.css
@@ -1,8 +1,8 @@
-.PostDate {
+.TagLinks {
     align-items: center;
     display: flex;
 }
 
-.PostDate__icon {
+.TagLinks__icon {
     margin-right: 0.5rem;
 }
