--- a/src/styles/_index.css
+++ b/src/styles/_index.css
@@ -35,3 +35,4 @@ body {
 @import './components/SearchHeader.css';
 @import './components/SearchLink.css';
 @import './components/TagLinks.css';
+@import './components/TweetButton.css';
