--- a/src/styles/components/SearchLink.css
+++ b/src/styles/components/SearchLink.css
@@ -4,8 +4,8 @@
     text-transform: capitalize;
 }
 
-.SearchLink--tags {
-    margin-left: 0.25rem;
+.SearchLink--tags:not(:last-child) {
+    margin-right: 0.25rem;
 }
 
 .SearchLink--tags:not(:last-child)::after {
