Add syntax highlighting

--- a/src/styles/_index.css
+++ b/src/styles/_index.css
@@ -4,6 +4,7 @@
 /* Global */
 @import './variables.css';
 @import './typography.css';
+@import './gatsby-prism.css';
 
 body {
     background: var(--primary-bg);
