--- a/src/styles/components/Responsive.css
+++ b/src/styles/components/Responsive.css
@@ -1,12 +1,13 @@
 .Responsive {
     margin-left: auto;
     margin-right: auto;
-    max-width: 800px;
+    width: 800px;
 }
 
 @media screen and (max-width: calc(800px + 32px)) {
-    .Responsive {   
+    .Responsive {
         margin-left: 1rem;
         margin-right: 1rem;
+        width: initial;
     }
 }
