--- a/src/styles/headings.css
+++ b/src/styles/headings.css
@@ -1,5 +1,5 @@
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Fira Sans', var(--system-fonts);
+    font-family: var(--display-font);
     line-height: 112.5%;
     margin-bottom: 1rem;
     margin-top: 1em;
