--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,4 +2,5 @@
 
 :root {
     --system-fonts: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --display-font: 'Fira Sans', var(--system-fonts);
 }
